# AtomicTickets

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
src/: main.py  routes.py
src/core/: config.py
src/db/: models.py  schemas.py  session.py
src/redis/: buy_ticket.lua  client.py
src/static/: index.html
src/worker/: celery_app.py
